story #9585: Fix dropdown in navbar z-index + icons in buttons

--- a/src/www/themes/BurningParrot/css/includes/_navbar.scss
+++ b/src/www/themes/BurningParrot/css/includes/_navbar.scss
@@ -69,7 +69,7 @@ header {
     height: $navbar-height;
     background: $navbar-background;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
-    z-index: 1000;
+    z-index: 100000;
 }
 
 .nav-link {
